--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/" target="_blank">Bongeka Hadebe</a> and
+          is
+          <a href="https://github.com/Bee-pil27/weather-joys" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://app.netlify.com/sites/sa-weather-app/overview"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
