--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <body>
     <div class="weather-app">
       <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
         <form id="search-form">
           <input
             type="search"
