--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
   </head>
   <body>
     <div class="weather-app">
-      <header>
-        <form id="search-form">
-          <input
-            type="search"
-            placeholder="Enter a city.."
-            required
-            class="search-input"
-            id="search-input"
-          />
-          <input type="submit" value="Search" class="search-button" />
-        </form>
-      </header>
+      <header></header>
       <main>
         <div class="current-weather">
           <div>
