--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
   </head>
   <body>
     <div class="weather-app">
-      <header></header>
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
+            <h1 class="current-city" id="current-city"></h1>
             <p class="current-details">
               <span id="current-date"></span>, moderate rain <br />
               Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
@@ -36,16 +41,8 @@
       <footer>
         <p>
           This project was coded by
-          <a href="https://github.com/" target="_blank">Bongeka Hadebe</a> and
-          is
-          <a href="https://github.com/Bee-pil27/weather-joys" target="_blank">
-            on GitHub</a
-          >
-          and
-          <a
-            href="https://app.netlify.com/sites/sa-weather-app/overview"
-            target="_blank"
-            >hosted on Netlify</a
+          <a href="https://github.com/" target="_blank">
+            Bongeka Hadebe> and is on GitHub</a
           >
         </p>
       </footer>
