Fixed footer error.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
         </div>
       </main>
       <footer>
-        <p>
-          This project was coded by
-          <a href="https://github.com/" target="_blank">
-            Bongeka Hadebe> and is on GitHub</a
-          >
-        </p>
+        This project was coded by
+        <a href="https://github.com/" target="_blank"> Bongeka Hadebe </a>, and
+        is open sourced on github
       </footer>
     </div>
   </body>
