--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            id="search-form-input"
+            class="search-form-input"
+          />
           <input type="search" placeholder="Enter a city..." required />
           <input type="submit" value="Search" />
         </form>
@@ -24,7 +31,7 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="current-city"></h1>
+            <h1 class="current-city" id="city"></h1>
             <p class="current-details">
               <span id="current-date"></span>, moderate rain <br />
               Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
