--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
           <div>
             <h1 class="current-city" id="city"></h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="description"></span> <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed">7.2km/h</strong>
             </p>
           </div>
           <div class="current-temperature">
