--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             class="search-form-input"
           />
           <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search"
         </form>
       </header>
       <main>
