--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="weather-app">
+      <form>
       <header>
         <form class="search-form" id="search-form">
           <input
@@ -25,8 +26,8 @@
             class="search-form-input"
           />
           <input type="search" placeholder="Enter a city..." required />
-          <input type="submit" value="Search"
-        </form>
+          <input type="submit" value="Search" />
+            </form>
       </header>
       <main>
         <div class="current-weather">
@@ -50,7 +51,6 @@
         <a href="https://github.com/" target="_blank"> Bongeka Hadebe </a>, and
         is open sourced on github
       </footer>
-    </div>
-  </body>
+     </body>
   <script src="src/index.js"></script>
 </html>
